fixed mobile logo png on mobile bug

--- a/css/style.css
+++ b/css/style.css
@@ -105,7 +105,7 @@ p{
 	width:130px;
 	margin:0 auto 30px;
     position: relative;
-    bottom: 100px;
+    bottom: 150px;
 }
 .header h1{
 	font-family: 'Montserrat',sans-serif;
